test/spec_vectors/local_tee/fail/module_42.wat
(module (func $large-mixed (param i64) (local i32 i64) (local.tee 214324343 (i32.const 0)) drop))